fix(component): style overlap (#9)

--- a/src/components/modal/styles.module.scss
+++ b/src/components/modal/styles.module.scss
@@ -18,13 +18,14 @@
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
     display: flex;
-    width: 80vh;
+    width: 60%;
     justify-content: center;
     align-items: center;
     margin: 50px auto;
     flex-direction: column;
     gap: 2rem;
     padding: 2rem;
+    height: 80vh;
 
     img {
       position: relative !important;
